Some Improvements